feat: Добавить modal

--- a/index.html
+++ b/index.html
@@ -81,24 +81,6 @@
           <p class="footer__logo">© 2020 Mesto Russia</p>
         </footer>
     </div>
-    <!--<div class="modal">
-      <div class="modal__container">
-        <button class="modal__close-button">
-          <img class="modal__close" src="./images/Close-button.svg" alt="Кнопка_выхода">
-        </button>
-        <h2 class="modal__title">Редактировать профиль</h2>
-        <form action="#" name="name" class="modal__field">
-          <p class="modal__name">Жак-Ив Кусто</p>
-          <div class="modal__line"></div>
-        </form>
-        <form action="#" name="about-me" class="modal__field">
-          <p class="modal__about-me">Исследователь океана</p>
-          <div class="modal__line"></div>
-        </form>
-        <button class="modal__button-save"><p class="modal__button-text">Сохранить</p></button>
-      </div>
-    </div>-->
-
     <div class="modal">
       <div class="modal__container">
         <button class="modal__close-button">
@@ -106,9 +88,9 @@
         </button>
         <h2 class="modal__title">Редактировать профиль</h2>
         <form action="#" name="name" class="modal__field">
-          <input type="text" class="" value="Жак-Ив Кусто">
-          <input type="text" class="" value="Исследователь океана">
-          <button type="submit" class="modal__button-save"><p class="modal__button-text">Сохранить</p></button>
+          <input type="text" class="form__input form__input_name" value="Жак-Ив Кусто"><div class="modal__line"></div>
+          <input type="text" class="form__input form__input_about-me" value="Исследователь океана"><div class="modal__line"></div>
+          <button type="submit" class="modal__button-save">Сохранить</button>
         </form>
       </div>
     </div>
