--- a/index.html
+++ b/index.html
@@ -10,68 +10,67 @@
     <div class="page__container">
         <header class="header">
           <div class="header__logo"></div> 
-          <div class="header__line"></div>
         </header>
         <main class="content">
           <section class="profile">
             <div class="profile__container">
-              <img class="profile__avatar" src="./images/Avatar.jpg" alt="Аватар">
+              <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
               <div class="profile__info">
                 <div class="profile__info-button">
                   <h1 class="profile__title">Жак-Ив Кусто</h1>
-                  <button class="profile__edit-button">
+                  <button type="button" class="profile__edit-button">
                     <img class="profile__edit-img" src="./images/profile-pencil.svg" alt="Кнопка_редактирования">
                   </button>
                 </div>
                 <p class="profile__subtitle">Исследователь океана</p>
               </div>            
             </div>
-            <button class="profile__add-button">
+            <button type="button" class="profile__add-button">
               <img class="profile__add-img" src="./images/button-add.svg" alt="Кнопка_добавления">
             </button>
           </section> 
 
           <section class="elements">
             <div class="element">
-              <img class="element__img" src="./images/Карачаевск.jpg" alt="Карачаевск">
+              <img class="element__img" src="./images/karachaevsk.jpg" alt="Карачаевск">
               <div class="element__group">
                 <h2 class="element__title">Карачаевск</h2>
-                <div class="element__like"></div>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
             <div class="element">
-              <img class="element__img" src="./images/Эльбрус.jpg" alt="Эльбрус">
+              <img class="element__img" src="./images/elbrus.jpg" alt="Эльбрус">
               <div class="element__group">
                 <h2 class="element__title">Гора Эльбрус</h2>
-                <div class="element__like"></div>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
             <div class="element">
-              <img class="element__img" src="./images/Домбай.jpg" alt="Домбай">
+              <img class="element__img" src="./images/dombai.jpg" alt="Домбай">
               <div class="element__group">
                 <h2 class="element__title">Домбай</h2>
-                <div class="element__like"></div>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
             <div class="element">
-              <img class="element__img" src="./images/Эльбрус.jpg" alt="Эльбрус">
+              <img class="element__img" src="./images/elbrus.jpg" alt="Эльбрус">
               <div class="element__group">
                 <h2 class="element__title">Гора Эльбрус</h2>
-                <div class="element__like"></div>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
             <div class="element">
-              <img class="element__img" src="./images/Домбай.jpg" alt="Домбай">
+              <img class="element__img" src="./images/dombai.jpg" alt="Домбай">
               <div class="element__group">
                 <h2 class="element__title">Домбай</h2>
-                <div class="element__like"></div>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
             <div class="element">
-              <img class="element__img" src="./images/Карачаевск.jpg" alt="Карачаевск">
+              <img class="element__img" src="./images/karachaevsk.jpg" alt="Карачаевск">
               <div class="element__group">
                 <h2 class="element__title">Карачаево-Черкесия</h2>
-                <div class="element__like"></div>
+                <button type="button" class="element__like"></button>
               </div>
             </div>
           </section>
@@ -83,17 +82,17 @@
     </div>
     <div class="modal">
       <div class="modal__container">
-        <button class="modal__close-button">
-          <img class="modal__close" src="./images/Close-button.svg" alt="Кнопка_выхода">
+        <button type="button" class="modal__close-button">
+          <img class="modal__close" src="./images/close-button.svg" alt="Кнопка_выхода">
         </button>
         <h2 class="modal__title">Редактировать профиль</h2>
         <form action="#" name="name" class="modal__field">
-          <input type="text" class="form__input form__input_name" value="Жак-Ив Кусто"><div class="modal__line"></div>
-          <input type="text" class="form__input form__input_about-me" value="Исследователь океана"><div class="modal__line"></div>
+          <input type="text" name="inputName" class="modal__input modal__input_name" value="Жак-Ив Кусто">
+          <input type="text" name="aboutMe" class="modal__input modal__input_about-me" value="Исследователь океана">
           <button type="submit" class="modal__button-save">Сохранить</button>
         </form>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
