fix: Поправить название картинок

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main class="content">
           <section class="profile">
             <div class="profile__container">
-              <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
+              <img class="profile__avatar" src="./images/avatar-photo.jpg" alt="Аватар">
               <div class="profile__info">
                 <div class="profile__info-button">
                   <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -83,7 +83,7 @@
     <div class="modal">
       <div class="modal__container">
         <button type="button" class="modal__close-button">
-          <img class="modal__close" src="./images/close-button.svg" alt="Кнопка_выхода">
+          <img class="modal__close" src="./images/close-icon.svg" alt="Кнопка_выхода">
         </button>
         <h2 class="modal__title">Редактировать профиль</h2>
         <form action="#" name="name" class="modal__field">
