fix: Исправить разрешение аватарки, удалить дублирующие медиазапросы, поправить имена в html

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <img class="modal__close" src="./images/close-icon.svg" alt="Кнопка_выхода">
         </button>
         <h2 class="modal__title">Редактировать профиль</h2>
-        <form action="#" name="name" class="modal__field">
-          <input type="text" name="inputName" class="modal__input modal__input_name" value="Жак-Ив Кусто">
-          <input type="text" name="aboutMe" class="modal__input modal__input_about-me" value="Исследователь океана">
+        <form action="#" name="form" class="modal__field">
+          <input type="text" name="name" class="modal__input modal__input_name" value="Жак-Ив Кусто">
+          <input type="text" name="about-me" class="modal__input modal__input_about-me" value="Исследователь океана">
           <button type="submit" class="modal__button-save">Сохранить</button>
         </form>
       </div>
