feat: Добавить кнопку удаления карточки

--- a/index.html
+++ b/index.html
@@ -66,10 +66,20 @@
       </div>
     </div>
 
+    <div class="modal modal_image-card">
+      <div class="modal__container-image">
+        <button type="button" class="modal__close-button">
+          <img class="modal__close" src="./images/close-icon.svg" alt="Кнопка_выхода">
+        </button>
+        <img class="modal__image-open" src="" alt="">
+        <h3 class="modal__title-open"></h3>
+      </div>
+    </div>
+
     <template class="elements-card">
       <div class="element">
         <button type="button" class="element__delete"></button>
-        <img class="element__img" src="" alt="Карачаевск">
+        <img class="element__img" src="" alt="">
         <div class="element__group">
           <h2 class="element__title"></h2>
           <button type="button" class="element__like"></button>
