feat: Доделать валидацию кнопки, Доделать закрытие модалок по нажатию esc и клику на оверлей

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <input type="url" name="url" class="modal__input modal__input_link" placeholder="Ссылка на картинку" required autocomplete="off">
           <span class="modal__error" id="url-error"></span>
 
-          <button type="submit" class="modal__button-save">Сохранить</button>
+          <button type="submit" class="modal__button-save modal__button-save_disabled" disabled>Сохранить</button>
         </form>
       </div>
     </div>
