--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <title>Mesto</title>
 </head>
@@ -82,7 +81,7 @@
         <button type="button" class="modal__close-button">
           <img class="modal__close" src="./images/close-icon.svg" alt="Кнопка_выхода">
         </button>
-        <img class="modal__image-open" src="" alt="">
+        <img class="modal__image-open"  alt="">
         <h3 class="modal__title-open"></h3>
       </div>
     </div>
@@ -90,13 +89,12 @@
     <template class="elements-card">
       <div class="element">
         <button type="button" class="element__delete"></button>
-        <img class="element__img" src="" alt="">
+        <img class="element__img" alt="">
         <div class="element__group">
           <h2 class="element__title"></h2>
           <button type="button" class="element__like"></button>
         </div>
       </div>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
